--- a/templates/base.html
+++ b/templates/base.html
@@ -2,20 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Temporal Trivia</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <style>
-      .header-image {
-        text-align: center;
-        margin-top: 0px;
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> 
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      text-align: center;
+      padding-top: 20px;
+    }
+
+    table {
+      border-collapse: separate;
+      border-spacing: 0;
+      margin: auto;
+      width: 100%;
+      border: 1px solid black;
+      border-radius: 10px;
+      overflow: hidden;
+      max-width: 500px;  /* Set a max-width for larger screens */
+    }
+
+    th, td {
+      border: 1px solid black;
+      text-align: center;
+      padding: 10px;
+    }
+
+    th {
+      background-color: black;
+      color: white;
+    }
+
+    td {
+      height: 50px;
+    }
+
+    h2 {
+      margin-bottom: 20px;  /* Add space below the h2 element */
+    }
+
+
+    /* Responsive image styling */
+    img {
+      max-width: 100%;  /* This will make the image responsive */
+      height: auto;  /* Maintain the aspect ratio */
+      max-height: 300px;  /* Restrict the maximum height */
+    }    
+
+    /* Responsive button styling */
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      margin: 2px 2px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 600px) {  /* This applies when the viewport is 600px or smaller */
+      body {
+        font-size: 18px;
       }
-  
-      .header-image img {
-        width: 150px;
-        height: 150px;
+      .button {
+        font-size: 18px;
       }
-    </style>
+      img {
+        max-height: 200px;  /* Make the image smaller for smaller screens */
+      }      
+    }  
+    </style>    
   </head>
   <body>
     <div class="header-image">
