--- a/templates/play.html
+++ b/templates/play.html
@@ -46,7 +46,7 @@
     {% for choice in choices %}
     <tr class="clickable-row" data-choice="{{ choice }}">
       <td>
-        {{ choice }}
+        {{ choice }}: {{ choices[choice] }}
       </td>
     </tr>
     {% endfor %}
@@ -57,7 +57,7 @@
   $('.clickable-row').click(function() {
     $('#selectedChoice').val($(this).data('choice'));
     $('#choiceForm').submit();
-  });
+  }); 
 </script>
 </body>
 
