enabled encyption fixed some minor bugs
Signed-off-by: ktenzer <keith.tenzer@gmail.com>

--- a/templates/create.html
+++ b/templates/create.html
@@ -102,7 +102,7 @@
     </tr>
   </table>
   <label for="username">Enter your player name:</label>
-  <input type="text" id="username" name="username"><br>
+  <input type="text" id="username" name="username" required><br>
   <input type="submit" class="btn btn-dark my-3" value="Create">
 </form>
 </body>
