--- a/templates/index.html
+++ b/templates/index.html
@@ -20,16 +20,17 @@
 </head>
 <body>
 <div class="top-align">
-  <h2>Welcome to the Trivia Game!</h2>
+  <h2>Welcome to Temporal Trivia Game!</h2>
 
   <h3>Create a new game</h3>
   <button onclick="location.href='/create_game'" class="btn btn-dark my-3" type="button">Create Game</button>
 
-  <h3>Join an existing game</h3>
+  <h3>Join or View an existing game</h3>
   <table>
     <tr>
       <th>Game ID</th>
       <th>Number of Players</th>
+      <th>Player Names</th>
       <th>Action</th>
     </tr>
     {% for id, game in games.items() %}
@@ -37,9 +38,10 @@
     <tr>
       <td>{{ id }}</td>
       <td>{{ game.users|length }}</td>
+      <td>{{ game.users }}</td>
       <td>
         {% if game.started %}
-            <button class="btn btn-dark my-3" onclick="window.location.href='/{{ id }}/end'">View</button>
+            <button class="btn btn-dark my-3" onclick="window.location.href='/{{ id }}/view'">View</button>
         {% else %}
           <button onclick="location.href='/{{ id }}/join'" class="btn btn-dark my-3" type="button">Join</button>
         {% endif %}        
