--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -29,8 +29,10 @@
       height: 50px;
     }
   </style>
+  <base href="/">    
 </head>
 <body>
+<img src="static/qr/qr-{{ game_id }}.gif" alt="Join" width="100" height="100"> 
 <h2 style="text-align: center;">Lobby</h2>
 <table>
   <tr>
@@ -49,7 +51,7 @@
     var interval = setInterval(function() {
         var elapsed = Date.now() - start; // calculate the elapsed time
         console.log("Elapsed time: " + elapsed);
-        if(elapsed > 100000) { // if 10 seconds have passed
+        if(elapsed > 30000) { // if 30 seconds have passed
             console.log("10 seconds have passed. Redirecting to start page.");
             clearInterval(interval); // stop the interval
             window.location.href = '/{{ game_id }}/start'; // redirect to start page
