--- a/templates/end.html
+++ b/templates/end.html
@@ -6,30 +6,24 @@
 <html>
 <head>
   <style>
+
     table {
-      margin: auto;
-      border-collapse: separate;
-      border-spacing: 0;
-      width: 50%;
-      border: 1px solid black;
-      border-radius: 10px;
-      overflow: hidden;
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 700px;
+      border: none;
     }
 
-    th, td {
-      border: 1px solid black;
-      padding: 10px;
-      text-align: center;
-    }
-
-    th {
-      background-color: black;
-      color: white;
-    }
+    h2 {    
+      text-align: right;
+      width: 70%;
+      padding: 0px 40px;
+    } 
+       
   </style>
 </head>
 <body>
-<h2 style="text-align: center;">Results</h2>
+<h2>Results</h2>
 <table>
   <tr>
     <th>Player</th>
