--- a/templates/base.html
+++ b/templates/base.html
@@ -64,17 +64,12 @@
       cursor: pointer;
     }
 
-    @media (max-width: 600px) {  /* This applies when the viewport is 600px or smaller */
-      body {
-        font-size: 18px;
+    @media (min-width: 992px) {
+        .header-image img {
+          max-width: 60%;
+          margin: auto;
+        }
       }
-      .button {
-        font-size: 18px;
-      }
-      img {
-        max-height: 150px;  /* Make the image smaller for smaller screens */
-      }      
-    }  
     </style>    
   </head>
   <body>
