fixed issue with queries failing sometimes and improved image size for mobile and PC
Signed-off-by: ktenzer <keith.tenzer@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,18 @@
       cursor: pointer;
     }
 
-    @media (min-width: 900px) {
-        .header-image img {
-          max-width: 50%;
-          margin: auto;
-        }
+    @media (min-width: 992px) {
+      .header-image img {
+        max-width: 60%;
+        margin: auto;
       }
+    }
+    @media (max-width: 600px) {
+      .header-image img {
+        max-width: 50%;
+        margin: auto;
+      }
+    }      
     </style>    
   </head>
   <body>
