added improvements for globalnamespace demo and fixed race condition in UI causing malformed games to hang UI
Signed-off-by: ktenzer <keith.tenzer@gmail.com>

--- a/templates/end.html
+++ b/templates/end.html
@@ -15,8 +15,8 @@
     }
 
     h2 {    
-      text-align: right;
-      width: 70%;
+      text-align: center;
+      width: 100%;
       padding: 0px 40px;
     } 
        
@@ -37,7 +37,7 @@
   {% endfor %}
 </table>
 <div style="text-align: center;">
-  <a href="/">Play Again</a>
+  <button onclick="location.href='/'" class="btn btn-dark my-3" type="button">Play Again</button>
 </div>
 </body>
 </html>
