--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,11 @@
     }
   </style>
 </head>
-<body>
+<body>  
 <div class="top-align">
-  <h2>Welcome to Temporal Trivia Game!</h2>
-
+  <h2>Welcome to Temporal Trivia Game!</h2> 
+  <h9>Brought to you by the Temporal SA Team</h9>
+  <br><br>
   <h3>Create a new game</h3>
   <button onclick="location.href='/create_game'" class="btn btn-dark my-3" type="button">Create Game</button>
 
