--- a/templates/base.html
+++ b/templates/base.html
@@ -79,9 +79,11 @@
     </style>    
   </head>
   <body>
-    <div class="header-image">
-      <img src="{{ url_for('static', filename='Temporal_Logo_Animation.ac2f7996.gif') }}" alt="Animated Image">
-    </div>    
+    <a href="https://temporal.io/blog/the-making-of-temporal-trivia" target="_blank">
+      <div class="header-image">
+          <img src="{{ url_for('static', filename='Temporal_Logo_Animation.ac2f7996.gif') }}" alt="Animated Image">
+      </div>
+    </a>
     <div class="container">
       {% block content %}
       {% endblock %}
